--- a/Master.tex
+++ b/Master.tex
@@ -142,8 +142,9 @@
 %\let\Cref\locref
 \let\oldcref\Cref
 \renewcommand{\Cref}[1]{[\oldcref{#1}\locref{#1}]\xspace}
-%\renewcommand{\Cref}[1]{\locref{#1}}
 
+\renewcommand{\Sref}[2]{[#2 \ref{#1}\locref{#1}]\xspace}
+%\renewcommand{\Cref}[1]{\locref{#1}}
 \let\oldtheorem\theorem
 \renewcommand{\theorem}{%
 	\crefalias{lemma}{theorem}
