--- a/Master.tex
+++ b/Master.tex
@@ -143,7 +143,7 @@
 \let\oldcref\Cref
 \renewcommand{\Cref}[1]{[\oldcref{#1}\locref{#1}]\xspace}
 
-\renewcommand{\Sref}[2]{[#2 \ref{#1}\locref{#1}]\xspace}
+\newcommand{\Sref}[2]{[#1 \ref{#2}\locref{#2}]\xspace}
 %\renewcommand{\Cref}[1]{\locref{#1}}
 \let\oldtheorem\theorem
 \renewcommand{\theorem}{%
